2010-03-17  Oliver Hader  <oliver@typo3.org>

	* Cleanup: Updated extension version to 1.1.6-dev
	* Fixed bug: Calling tx_dam::_addItem() with undefined items produces PHP warnings

2010-02-18  Michiel Roos <michiel@netcreators.com>
	* Fix #13298: Indexing problems when lockingMode is disabled (Thanks to ste)

2010-02-05  Michiel Roos <michiel@netcreators.com>
	* Fix #11350: Not able to preview image(s) in workspace inserted to a Text w/Image content element. (Thanks to Rajunew)
	* Fix #13375: DAM floods the deprecation log because it uses t3lib_div::makeInstanceClassName (Thanks to Uschi Renziehausen)
	* Fix #13409: Wrong assignation in tx_dam_db::getMetaInfoFieldList() (Thanks to Francois Suter)

2010-01-25  Michiel Roos <michiel@netcreators.com>
	* Fix #13295: Moving of files doesn't work (Thanks to Chris Mueller)
	* Cleanup: mod_cmd/locallang.xml text correction

2010-01-12  Michiel Roos <michiel@netcreators.com>
	* Fix #13215: stylesheet.css not loaded in category treeviews (Thanks to Uschi Renziehausen)

2010-01-11  Michiel Roos <michiel@netcreators.com>
	* Fix #13198: Selecting dam items by click on category title causes an SQL-error (Thanks to Uschi Renziehausen)
	* Fix #13203: Duplication of tool 'Media types' in trunk version (Thanks to Uschi Renziehausen)

2010-01-10  Michiel Roos <michiel@netcreators.com>
	* Fix #12918: Respect $TCA['tx_dam_cat']['ctrl']['default_sortby'] = 'mychoice'; everywhere (Thanks to Uschi Renziehausen) 

2009-12-30  Michiel Roos <michiel@netcreators.com>
	* Fixed bug #11700: use _GPmerged instead of GParrayMerged (Thanks to Ringer Georg)
	* Change: dam 1.2 requires TYPO3 4.3 and PHP 5.2.6
	* Fixed bug #12538: Generated contain an invalid relational operator [DBAL] (Thanks to Xavier Perseguers) 
	* Fixed bug #11936: search in media->list does not work (Thanks to Andreas Kiessling)
	* Change for #9177: Indexing files is not working in NFS Filesystems (Thanks to Ingo Schmitt, Dan Osipov)
