@@ -1,13 +1,13 @@
 <?php
 
 ########################################################################
-# Extension Manager/Repository config file for ext: "dam"
+# Extension Manager/Repository config file for ext "dam".
 #
-# Auto generated 15-01-2009 11:11
+# Auto generated 17-03-2010 15:07
 #
 # Manual updates:
-# Only the data in the array - anything else is removed by next write.
-# "version" and "dependencies" must not be touched!
+# Only the data in the array - everything else is removed by next
+# writing. "version" and "dependencies" must not be touched!
 ########################################################################
 
 $EM_CONF[$_EXTKEY] = array(
@@ -29,7 +29,7 @@ $EM_CONF[$_EXTKEY] = array(
 	'clearcacheonload' => 0,
 	'lockType' => '',
 	'author' => 'The DAM development team',
-	'author_email' => 'typo3-project-dam@lists.netfielders.de',
+	'author_email' => 'typo3-project-dam@lists.typo3.org',
 	'author_company' => '',
 	'CGLcompliance' => '',
 	'CGLcompliance_note' => '',
@@ -48,7 +48,7 @@ $EM_CONF[$_EXTKEY] = array(
 		'suggests' => array(
 		),
 	),
-	'_md5_values_when_last_written' => '',
+	'_md5_values_when_last_written' => 'a:298:{s:9:"ChangeLog";s:4:"7512";s:20:"class.ext_update.php";s:4:"27b8";s:32:"class.tx_dam_browse_category.php";s:4:"2df6";s:30:"class.tx_dam_browse_folder.php";s:4:"69f4";s:29:"class.tx_dam_browse_media.php";s:4:"bf9d";s:10:"close.html";s:4:"a235";s:21:"ext_conf_template.txt";s:4:"ec3b";s:12:"ext_icon.gif";s:4:"999b";s:17:"ext_localconf.php";s:4:"3427";s:15:"ext_php_api.dat";s:4:"af9d";s:14:"ext_tables.php";s:4:"2ed5";s:14:"ext_tables.sql";s:4:"5bfb";s:25:"ext_tables_static+adt.sql";s:4:"b329";s:15:"icon_tx_dam.gif";s:4:"999b";s:19:"icon_tx_dam_cat.gif";s:4:"2596";s:24:"icon_tx_dam_lightbox.gif";s:4:"3433";s:28:"icon_tx_dam_log_download.gif";s:4:"0b2d";s:25:"icon_tx_dam_selection.gif";s:4:"3433";s:21:"locallang_csh_dam.xml";s:4:"c1dc";s:16:"locallang_db.xml";s:4:"70ae";s:15:"modules_dam.gif";s:4:"06f8";s:7:"tca.php";s:4:"2d97";s:19:"tca_media_field.php";s:4:"16b8";s:35:"binding/be/class.tx_dam_cm_file.php";s:4:"2d19";s:37:"binding/be/class.tx_dam_cm_record.php";s:4:"a785";s:37:"binding/be/class.tx_dam_show_item.php";s:4:"23f2";s:42:"binding/imgtag/class.tx_dam_tsfeimgtag.php";s:4:"8a8e";s:32:"binding/imgtag/ext_localconf.php";s:4:"b6ab";s:52:"binding/mediatag/class.tx_dam_rtetransform_ahref.php";s:4:"acea";s:55:"binding/mediatag/class.tx_dam_rtetransform_mediatag.php";s:4:"d0d4";s:46:"binding/mediatag/class.tx_dam_tsfemediatag.php";s:4:"f4b8";s:34:"binding/mediatag/ext_localconf.php";s:4:"2069";s:33:"binding/mediatag/pageTSConfig.txt";s:4:"55c8";s:44:"binding/softref/class.tx_dam_softrefproc.php";s:4:"d52d";s:33:"binding/softref/ext_localconf.php";s:4:"b828";s:30:"binding/softref/ext_tables.php";s:4:"9d7d";s:44:"binding/tce/class.tx_dam_tce_extfilefunc.php";s:4:"d2dc";s:45:"binding/tce/class.tx_dam_tce_filetracking.php";s:4:"80a5";s:48:"binding/tce/class.tx_dam_tce_languagehotlist.php";s:4:"bec3";s:40:"binding/tce/class.tx_dam_tce_process.php";s:4:"7043";s:48:"compat/class.tx_dam_rtehtmlarea_browse_links.php";s:4:"d436";s:48:"compat/class.tx_dam_rtehtmlarea_browse_media.php";s:4:"7edb";s:48:"compat/class.tx_dam_rtehtmlarea_select_image.php";s:4:"8701";s:47:"compat/class.ux_tx_rtehtmlarea_select_image.php";s:4:"19fb";s:24:"compat/ext_localconf.php";s:4:"6e09";s:20:"compat/locallang.xml";s:4:"d618";s:39:"components/class.tx_dam_actionsFile.php";s:4:"5ce6";s:41:"components/class.tx_dam_actionsFolder.php";s:4:"af87";s:41:"components/class.tx_dam_actionsRecord.php";s:4:"be9e";s:47:"components/class.tx_dam_dbTriggerMediaTypes.php";s:4:"e3a6";s:39:"components/class.tx_dam_index_rules.php";s:4:"9796";s:44:"components/class.tx_dam_multiActionsFile.php";s:4:"c80c";s:46:"components/class.tx_dam_multiActionsRecord.php";s:4:"93c4";s:42:"components/class.tx_dam_previewerImage.php";s:4:"25ca";s:40:"components/class.tx_dam_previewerMP3.php";s:4:"1860";s:45:"components/class.tx_dam_selectionCategory.php";s:4:"f35c";s:43:"components/class.tx_dam_selectionFolder.php";s:4:"d09b";s:45:"components/class.tx_dam_selectionIndexRun.php";s:4:"662e";s:44:"components/class.tx_dam_selectionMeTypes.php";s:4:"af08";s:44:"components/class.tx_dam_selectionRecords.php";s:4:"74d8";s:43:"components/class.tx_dam_selectionStatus.php";s:4:"e9b1";s:49:"components/class.tx_dam_selectionStringSearch.php";s:4:"dc54";s:35:"components/locallang_indexrules.xml";s:4:"2629";s:14:"doc/manual.sxw";s:4:"7bfe";s:21:"i/add_to_lightbox.gif";s:4:"8d0d";s:21:"i/button_deselect.gif";s:4:"7903";s:19:"i/button_remove.gif";s:4:"0414";s:21:"i/button_reselect.gif";s:4:"f06a";s:9:"i/cat.gif";s:4:"0e9a";s:10:"i/cat2.gif";s:4:"89a7";s:16:"i/cat2folder.gif";s:4:"b7f4";s:10:"i/cat3.gif";s:4:"2ed1";s:16:"i/cat3folder.gif";s:4:"2797";s:15:"i/catfolder.gif";s:4:"a16b";s:15:"i/edit_file.gif";s:4:"9ad3";s:18:"i/edit_file_i_.gif";s:4:"194f";s:16:"i/edit_popup.gif";s:4:"0e1d";s:12:"i/equals.gif";s:4:"fcb9";s:15:"i/equals_16.gif";s:4:"54a3";s:13:"i/error_h.gif";s:4:"9388";s:17:"i/goback_flat.gif";s:4:"3b78";s:20:"i/indexrunfolder.gif";s:4:"558a";s:18:"i/indexruntype.gif";s:4:"47b5";s:19:"i/is_referenced.gif";s:4:"6350";s:14:"i/localize.gif";s:4:"632a";s:23:"i/media-application.png";s:4:"b316";s:17:"i/media-audio.png";s:4:"ec87";s:22:"i/media-collection.png";s:4:"3089";s:19:"i/media-dataset.png";s:4:"05eb";s:16:"i/media-font.png";s:4:"5651";s:17:"i/media-image.png";s:4:"5342";s:23:"i/media-interactive.png";s:4:"3b67";s:17:"i/media-model.png";s:4:"b6e0";s:19:"i/media-service.png";s:4:"13cd";s:20:"i/media-software.png";s:4:"3d09";s:16:"i/media-text.png";s:4:"c844";s:21:"i/media-undefined.png";s:4:"bc98";s:17:"i/media-video.png";s:4:"cc04";s:17:"i/mediafolder.gif";s:4:"f898";s:15:"i/mediatype.gif";s:4:"8bd0";s:16:"i/mimefolder.gif";s:4:"16bd";s:14:"i/mimetype.gif";s:4:"379f";s:11:"i/minus.gif";s:4:"5f98";s:14:"i/minus_16.gif";s:4:"cfa1";s:19:"i/new_webfolder.gif";s:4:"0ac3";s:10:"i/plus.gif";s:4:"80dd";s:13:"i/plus_16.gif";s:4:"ab3d";s:15:"i/protected.gif";s:4:"b9d9";s:17:"i/rename_file.gif";s:4:"48fb";s:18:"i/replace_file.gif";s:4:"ae41";s:18:"i/statusfolder.gif";s:4:"efdc";s:16:"i/statustype.gif";s:4:"6fd4";s:17:"i/unprotected.gif";s:4:"df4a";s:19:"i/view_readonly.gif";s:4:"db34";s:12:"i/18/doc.gif";s:4:"0975";s:12:"i/18/dot.gif";s:4:"0975";s:21:"i/18/folder_mount.gif";s:4:"eabb";s:27:"i/18/folder_mount_group.gif";s:4:"0680";s:30:"i/18/folder_mount_readonly.gif";s:4:"7e8a";s:26:"i/18/folder_mount_user.gif";s:4:"2129";s:24:"i/18/folder_recycler.gif";s:4:"cf3b";s:19:"i/18/folder_sys.gif";s:4:"4209";s:22:"i/18/folder_sys_ro.gif";s:4:"165c";s:20:"i/18/folder_temp.gif";s:4:"1aed";s:19:"i/18/folder_web.gif";s:4:"fe80";s:29:"i/18/folder_web_protected.gif";s:4:"cd4a";s:22:"i/18/folder_web_ro.gif";s:4:"c2b7";s:13:"i/18/html.gif";s:4:"f6b2";s:26:"i/18/mtype_application.gif";s:4:"0185";s:20:"i/18/mtype_audio.gif";s:4:"279b";s:25:"i/18/mtype_collection.gif";s:4:"a48d";s:22:"i/18/mtype_dataset.gif";s:4:"4285";s:19:"i/18/mtype_font.gif";s:4:"7afa";s:20:"i/18/mtype_image.gif";s:4:"1d47";s:26:"i/18/mtype_interactive.gif";s:4:"be4d";s:20:"i/18/mtype_model.gif";s:4:"b052";s:22:"i/18/mtype_service.gif";s:4:"0235";s:23:"i/18/mtype_software.gif";s:4:"3e9f";s:19:"i/18/mtype_text.gif";s:4:"6c86";s:24:"i/18/mtype_undefined.gif";s:4:"bf41";s:20:"i/18/mtype_video.gif";s:4:"f848";s:12:"i/18/pdf.gif";s:4:"49a4";s:20:"lib/class.tx_dam.php";s:4:"ff37";s:31:"lib/class.tx_dam_actionbase.php";s:4:"fdd4";s:31:"lib/class.tx_dam_actioncall.php";s:4:"9de3";s:30:"lib/class.tx_dam_allowdeny.php";s:4:"3b77";s:33:"lib/class.tx_dam_batchprocess.php";s:4:"7595";s:32:"lib/class.tx_dam_browsetrees.php";s:4:"ba2c";s:27:"lib/class.tx_dam_config.php";s:4:"44f6";s:23:"lib/class.tx_dam_db.php";s:4:"26bd";s:31:"lib/class.tx_dam_editorbase.php";s:4:"ce08";s:32:"lib/class.tx_dam_filebrowser.php";s:4:"1d21";s:28:"lib/class.tx_dam_guifunc.php";s:4:"8893";s:34:"lib/class.tx_dam_guirenderlist.php";s:4:"8e55";s:26:"lib/class.tx_dam_image.php";s:4:"5db3";s:29:"lib/class.tx_dam_indexing.php";s:4:"fa26";s:34:"lib/class.tx_dam_indexrulebase.php";s:4:"bb5e";s:34:"lib/class.tx_dam_iterator_base.php";s:4:"d659";s:32:"lib/class.tx_dam_iterator_db.php";s:4:"1999";s:41:"lib/class.tx_dam_iterator_db_lang_ovl.php";s:4:"94dd";s:33:"lib/class.tx_dam_iterator_dir.php";s:4:"1cf5";s:35:"lib/class.tx_dam_iterator_media.php";s:4:"b0d3";s:40:"lib/class.tx_dam_iterator_references.php";s:4:"ea91";s:29:"lib/class.tx_dam_listbase.php";s:4:"196d";s:30:"lib/class.tx_dam_listfiles.php";s:4:"dd25";s:32:"lib/class.tx_dam_listpointer.php";s:4:"f549";s:32:"lib/class.tx_dam_listrecords.php";s:4:"cc2d";s:35:"lib/class.tx_dam_listreferences.php";s:4:"0ebb";s:26:"lib/class.tx_dam_media.php";s:4:"f89c";s:29:"lib/class.tx_dam_navframe.php";s:4:"9185";s:38:"lib/class.tx_dam_previewerprocbase.php";s:4:"44ef";s:29:"lib/class.tx_dam_querygen.php";s:4:"d5db";s:27:"lib/class.tx_dam_scbase.php";s:4:"7ffc";s:30:"lib/class.tx_dam_selection.php";s:4:"b442";s:35:"lib/class.tx_dam_selectionquery.php";s:4:"9bc9";s:32:"lib/class.tx_dam_selprocbase.php";s:4:"a996";s:31:"lib/class.tx_dam_selstorage.php";s:4:"612f";s:32:"lib/class.tx_dam_simpleforms.php";s:4:"9244";s:27:"lib/class.tx_dam_svlist.php";s:4:"c117";s:30:"lib/class.tx_dam_sysfolder.php";s:4:"da04";s:28:"lib/class.tx_dam_tcafunc.php";s:4:"01cd";s:29:"lib/class.tx_dam_tce_file.php";s:4:"4b58";s:28:"lib/class.tx_dam_tcefunc.php";s:4:"3252";s:25:"lib/class.tx_dam_tsfe.php";s:4:"e9db";s:17:"lib/locallang.xml";s:4:"77af";s:20:"lib/tx_dam_types.php";s:4:"3c63";s:41:"mod_cmd/class.tx_dam_cmd_filecopymove.php";s:4:"c682";s:39:"mod_cmd/class.tx_dam_cmd_filedelete.php";s:4:"91cb";s:36:"mod_cmd/class.tx_dam_cmd_filenew.php";s:4:"4fb7";s:39:"mod_cmd/class.tx_dam_cmd_filerename.php";s:4:"8672";s:40:"mod_cmd/class.tx_dam_cmd_filereplace.php";s:4:"5c50";s:41:"mod_cmd/class.tx_dam_cmd_folderdelete.php";s:4:"cb5f";s:38:"mod_cmd/class.tx_dam_cmd_foldernew.php";s:4:"9f7d";s:41:"mod_cmd/class.tx_dam_cmd_folderrename.php";s:4:"1599";s:36:"mod_cmd/class.tx_dam_cmd_nothing.php";s:4:"ec71";s:16:"mod_cmd/conf.php";s:4:"bf3e";s:17:"mod_cmd/index.php";s:4:"688d";s:21:"mod_cmd/locallang.xml";s:4:"6066";s:25:"mod_cmd/locallang_mod.xml";s:4:"0a91";s:22:"mod_cmd/moduleicon.gif";s:4:"adc5";s:35:"mod_edit/class.tx_dam_edit_text.php";s:4:"052a";s:17:"mod_edit/conf.php";s:4:"d0a2";s:18:"mod_edit/index.php";s:4:"c829";s:22:"mod_edit/locallang.xml";s:4:"def1";s:26:"mod_edit/locallang_mod.xml";s:4:"ede1";s:23:"mod_edit/moduleicon.gif";s:4:"adc5";s:18:"mod_file/clear.gif";s:4:"cc11";s:17:"mod_file/conf.php";s:4:"ff84";s:18:"mod_file/index.php";s:4:"628c";s:22:"mod_file/locallang.xml";s:4:"0bd0";s:26:"mod_file/locallang_mod.xml";s:4:"0d91";s:23:"mod_file/moduleicon.gif";s:4:"1d11";s:18:"mod_info/clear.gif";s:4:"cc11";s:17:"mod_info/conf.php";s:4:"ba10";s:18:"mod_info/index.php";s:4:"2a31";s:22:"mod_info/locallang.xml";s:4:"d3e8";s:26:"mod_info/locallang_mod.xml";s:4:"b455";s:23:"mod_info/moduleicon.gif";s:4:"0384";s:18:"mod_list/clear.gif";s:4:"cc11";s:17:"mod_list/conf.php";s:4:"ed29";s:18:"mod_list/index.php";s:4:"40d2";s:22:"mod_list/locallang.xml";s:4:"bcbc";s:26:"mod_list/locallang_mod.xml";s:4:"2bc7";s:23:"mod_list/moduleicon.gif";s:4:"adc5";s:17:"mod_main/conf.php";s:4:"683e";s:26:"mod_main/locallang_mod.xml";s:4:"3161";s:23:"mod_main/moduleicon.gif";s:4:"3833";s:28:"mod_main/tx_dam_navframe.php";s:4:"e9a0";s:19:"mod_tools/clear.gif";s:4:"cc11";s:18:"mod_tools/conf.php";s:4:"114c";s:19:"mod_tools/index.php";s:4:"bd1c";s:23:"mod_tools/locallang.xml";s:4:"74f0";s:27:"mod_tools/locallang_mod.xml";s:4:"1f74";s:24:"mod_tools/moduleicon.gif";s:4:"cce3";s:29:"mod_tools/tx_dam_navframe.php";s:4:"a63d";s:24:"mod_treebrowser/conf.php";s:4:"572d";s:25:"mod_treebrowser/index.php";s:4:"d3dc";s:33:"mod_treebrowser/locallang_mod.php";s:4:"0c52";s:30:"mod_treebrowser/moduleicon.gif";s:4:"adc5";s:44:"modfunc_file_list/class.tx_dam_file_list.php";s:4:"b1cc";s:31:"modfunc_file_list/locallang.xml";s:4:"f068";s:48:"modfunc_file_upload/class.tx_dam_file_upload.php";s:4:"bdb8";s:33:"modfunc_file_upload/locallang.xml";s:4:"25c5";s:37:"modfunc_file_upload/upload_status.php";s:4:"7ae8";s:54:"modfunc_info_reference/class.tx_dam_info_reference.php";s:4:"bf74";s:36:"modfunc_info_reference/locallang.xml";s:4:"3c1f";s:46:"modfunc_list_batch/class.tx_dam_list_batch.php";s:4:"d545";s:32:"modfunc_list_batch/locallang.xml";s:4:"aaed";s:50:"modfunc_list_editsel/class.tx_dam_list_editsel.php";s:4:"9c45";s:34:"modfunc_list_editsel/locallang.xml";s:4:"fac3";s:44:"modfunc_list_list/class.tx_dam_list_list.php";s:4:"24ba";s:31:"modfunc_list_list/locallang.xml";s:4:"1b75";s:48:"modfunc_list_thumbs/class.tx_dam_list_thumbs.php";s:4:"b08e";s:33:"modfunc_list_thumbs/locallang.xml";s:4:"6d5d";s:50:"modfunc_tools_config/class.tx_dam_tools_config.php";s:4:"20e9";s:34:"modfunc_tools_config/locallang.xml";s:4:"39bb";s:58:"modfunc_tools_indexsetup/class.tx_dam_tools_indexsetup.php";s:4:"3df3";s:38:"modfunc_tools_indexsetup/locallang.xml";s:4:"5b7d";s:60:"modfunc_tools_indexupdate/class.tx_dam_tools_indexupdate.php";s:4:"9bd6";s:39:"modfunc_tools_indexupdate/locallang.xml";s:4:"c0e4";s:56:"modfunc_tools_mimetypes/class.tx_dam_tools_mimetypes.php";s:4:"2171";s:37:"modfunc_tools_mimetypes/template.html";s:4:"3c28";s:60:"modfunc_tools_serviceinfo/class.tx_dam_tools_serviceinfo.php";s:4:"5a3e";s:12:"pi/setup.txt";s:4:"bd9f";s:16:"res/emff_inx.swf";s:4:"83f7";s:19:"res/emff_kubrik.swf";s:4:"cb27";s:17:"res/emff_lila.swf";s:4:"f05b";s:16:"res/emff_old.swf";s:4:"360e";s:22:"res/css/stylesheet.css";s:4:"01b6";s:26:"res/templates/mod_cmd.html";s:4:"8815";s:27:"res/templates/mod_edit.html";s:4:"f17d";s:32:"res/templates/mod_file_list.html";s:4:"63c6";s:27:"res/templates/mod_info.html";s:4:"117b";s:27:"res/templates/mod_list.html";s:4:"460e";s:31:"res/templates/mod_navframe.html";s:4:"131f";s:28:"res/templates/mod_tools.html";s:4:"117b";s:30:"tests/class.tx_dam_testlib.php";s:4:"9684";s:35:"tests/tx_dam_allowdeny_testcase.php";s:4:"98cd";s:37:"tests/tx_dam_base_access_testcase.php";s:4:"40e7";s:37:"tests/tx_dam_base_config_testcase.php";s:4:"1987";s:36:"tests/tx_dam_base_index_testcase.php";s:4:"6763";s:40:"tests/tx_dam_base_metamedia_testcase.php";s:4:"45e2";s:38:"tests/tx_dam_base_process_testcase.php";s:4:"1bf2";s:30:"tests/tx_dam_base_testcase.php";s:4:"fd40";s:32:"tests/tx_dam_config_testcase.php";s:4:"9553";s:28:"tests/tx_dam_db_testcase.php";s:4:"0759";s:31:"tests/tx_dam_media_testcase.php";s:4:"56c5";s:23:"tests/fixtures/IMG_0511";s:4:"8558";s:28:"tests/fixtures/IMG_2971_.JPG";s:4:"184e";s:34:"tests/fixtures/example-content.txt";s:4:"4e23";s:41:"tests/fixtures/indexing.setup-set_keyword";s:4:"b38c";s:40:"treelib/class.tx_dam_treelib_browser.php";s:4:"83bf";s:43:"treelib/class.tx_dam_treelib_ebtreeview.php";s:4:"c92a";s:47:"treelib/class.tx_dam_treelib_elementbrowser.php";s:4:"fbd8";s:41:"treelib/class.tx_dam_treelib_tceforms.php";s:4:"f1c3";s:20:"tsconfig/default.txt";s:4:"c68b";s:20:"tsconfig/example.txt";s:4:"4187";s:20:"tsconfig/minimal.txt";s:4:"ef7b";}',
 );
 
 ?>
